Issue #7566 X closing button for cookies panel is not visible
This commit contains changes to make the close cookie
policy warning button visbile. In order to achieve visibility
I applied a class to the glyph showing the icon and I used
Mapstore default varaibles for button colours, so that the button
will show correctly both in light and dark themes

--- a/web/client/themes/default/less/cookie.less
+++ b/web/client/themes/default/less/cookie.less
@@ -21,6 +21,10 @@
     .cookie-header {
         .color-var(@theme-vars[primary-contrast]);
     }
+
+    .cookie-close-btn {
+        .color-var(@theme-vars[main-color]);
+    }
 }
 
 // **************
@@ -142,9 +146,9 @@
     height: 44px;
 }
 
-.cookie-header > span {
+.cookie-header > .cookie-close-btn {
     float: right;
     cursor: pointer;
-    font-size: 40px;
+    font-size: 30px;
     width: 44px;
 }
